--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         <!-- Votre menu de navigation -->
     </nav>
 
-    <div class="container mt-4">
+    <div class="container p-2">
         {% for message in app.flashes('success') %}
             <div class="alert alert-success">
                 {{ message }}
