--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,49 +1,60 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contact
-{% endblock %}
+{% block title %}Contact{% endblock %}
 
 {% block body %}
-	<div class="container">
-		<div class="col-md-12 w-50 mx-auto">
-			<div class="card">
-				<div class="card-body">
-					<h1>Contactez-nous</h1>
-					{% for message in app.flashes('success') %}
-						<div class="alert alert-success">
-							{{ message }}
-						</div>
-					{% endfor %}
-					{% for message in app.flashes('error') %}
-						<div class="alert alert-danger">
-							{{ message }}
-						</div>
-					{% endfor %}
-					{{ form_start(form) }}
-					<div class="form-group">
-						{{ form_label(form.name) }}
-						{{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
-						{{ form_errors(form.name) }}
+    <div class="container">
+        <div class="col-md-12 w-50 mx-auto">
+            <div class="card">
+                <div class="card-body">
+                    <h1>Contactez-nous</h1>
+                    {% for message in app.flashes('success') %}
+                        <div class="alert alert-success">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    {% for message in app.flashes('error') %}
+                        <div class="alert alert-danger">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    {{ form_start(form) }}
+                    <div class="form-group">
+                        {{ form_label(form.name) }}
+                        {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(form.name) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.firstName) }} <!-- Nouveau champ -->
+                        {{ form_widget(form.firstName, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(form.firstName) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.email) }}
+                        {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(form.email) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.phone) }} <!-- Nouveau champ -->
+                        {{ form_widget(form.phone, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(form.phone) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.subject) }}
+                        {{ form_widget(form.subject, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(form.subject) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.message) }}
+                        {{ form_widget(form.message, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(form.message) }}
+                    </div>
+					<div class="d-flex justify-content-end mt-4">
+						<button type="submit" class="btn btn-primary">Envoyer</button>
 					</div>
-					<div class="form-group">
-						{{ form_label(form.email) }}
-						{{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
-						{{ form_errors(form.email) }}
-					</div>
-					<div class="form-group">
-						{{ form_label(form.subject) }}
-						{{ form_widget(form.subject, {'attr': {'class': 'form-control'}}) }}
-						{{ form_errors(form.subject) }}
-					</div>
-					<div class="form-group">
-						{{ form_label(form.message) }}
-						{{ form_widget(form.message, {'attr': {'class': 'form-control'}}) }}
-						{{ form_errors(form.message) }}
-					</div>
-					{{ form_end(form) }}
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
