--- a/templates/course/new.html.twig
+++ b/templates/course/new.html.twig
@@ -56,9 +56,9 @@
 						{{ form_errors(form.recurrenceDuration) }}
 					</div>
 
-					<div class="d-flex justify-content-end mt-4">
+					{# <div class="d-flex justify-content-end mt-4">
 						<button type="submit" class="btn btn-primary">Enregistrer</button>
-					</div>
+					</div> #}
 					{{ form_end(form) }}
 				</div>
 			</div>
