--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link" href="{{ path('calendar') }}">Réservation</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ path('planning') }}">Planning</a></li>
                     {# <li class="nav-item"><a class="nav-link" href="/tarifs">Tarifs</a></li> #}
-                    <li class="nav-item"><a class="nav-link" href="{{ path('contact') }}">Contact</a></li>
+                    {# <li class="nav-item"><a class="nav-link" href="{{ path('contact') }}">Contact</a></li> #}
                     {# <li class="nav-item"><a class="nav-link" href="{{ path('photo_gallery') }}">Galerie</a></li> #}
                     
                     {% if is_granted('ROLE_ADMIN') %}
