--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,14 +22,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="/">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ path('coach_list') }}">Coach</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ path('course_details_list') }}">Activités</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ path('event_list') }}">Événements</a></li>
+                    {# <li class="nav-item"><a class="nav-link" href="{{ path('coach_list') }}">Coach</a></li> #}
+                    {# <li class="nav-item"><a class="nav-link" href="{{ path('course_details_list') }}">Activités</a></li> #}
+                    {# <li class="nav-item"><a class="nav-link" href="{{ path('event_list') }}">Événements</a></li> #}
                     <li class="nav-item"><a class="nav-link" href="{{ path('calendar') }}">Réservation</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ path('planning') }}">Planning</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/tarifs">Tarifs</a></li>
+                    {# <li class="nav-item"><a class="nav-link" href="/tarifs">Tarifs</a></li> #}
                     <li class="nav-item"><a class="nav-link" href="{{ path('contact') }}">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ path('photo_gallery') }}">Galerie</a></li>
+                    {# <li class="nav-item"><a class="nav-link" href="{{ path('photo_gallery') }}">Galerie</a></li> #}
                     
                     {% if is_granted('ROLE_ADMIN') %}
                         <li class="nav-item"><a class="nav-link text-danger" href="{{ path('course_list') }}">Cours</a></li>
