--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Planning{% endblock %}
+{% block title %}Planning
+{% endblock %}
 
 {% block body %}
 	<div class="container planning">
@@ -34,7 +35,9 @@
 						{% for timeslot in weekday_timeslots %}
 							<tr>
 								{% set interval = (timeslot >= '18:00') ? 15 : 30 %}
-								<td>{{ timeslot }} - {{ timeslot|date_modify('+' ~ interval ~ ' minutes')|date('H:i') }}</td>
+								<td>{{ timeslot }}
+									-
+									{{ timeslot|date_modify('+' ~ interval ~ ' minutes')|date('H:i') }}</td>
 								{% for dow in ['Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi'] %}
 									{% set key = dow ~ '-' ~ timeslot %}
 									{% if merged_slots[key] is not defined %}
@@ -62,7 +65,9 @@
 												<td class="{{ class_name }}" rowspan="{{ duration }}">
 													{{ schedule.courseName }}
 													<br>
-													({{ schedule.startTime|date('H:i') }} - {{ schedule.endTime|date('H:i') }})
+													({{ schedule.startTime|date('H:i') }}
+													-
+													{{ schedule.endTime|date('H:i') }})
 													{% if is_granted('ROLE_ADMIN') %}
 														<br>
 														<a href="{{ path('planning_edit', {id: schedule.id}) }}" class="btn btn-secondary btn-sm mt-1">Modifier</a>
@@ -97,12 +102,14 @@
 					</thead>
 					<tbody>
 						{% set saturday_timeslots = [
-							'09:00', '09:30', '10:00', '10:30', '11:00', '11:30', '12:00'
+							'09:00', '09:30', '10:00', '10:30', '11:00', '11:30'
 						] %}
 
 						{% for timeslot in saturday_timeslots %}
 							<tr>
-								<td>{{ timeslot }} - {{ timeslot|date_modify('+30 minutes')|date('H:i') }}</td>
+								<td>{{ timeslot }}
+									-
+									{{ timeslot|date_modify('+30 minutes')|date('H:i') }}</td>
 								{% set key = 'Samedi-' ~ timeslot %}
 								{% if merged_slots[key] is not defined %}
 									{% set course_found = false %}
@@ -115,21 +122,23 @@
 
 										{% if schedule.day == 'Samedi' and start_time == start_slot %}
 											{% set class_name = '' %}
-											{% if schedule.courseName == 'Yoga Aérien' %}
+											{% if schedule.courseName == 'Yoga aérien' %}
 												{% set class_name = 'bg-yoga-aerien' %}
 											{% elseif schedule.courseName == 'Pole Dance' %}
 												{% set class_name = 'bg-pole-dance' %}
 											{% elseif schedule.courseName == 'Hammock' %}
 												{% set class_name = 'bg-hammock' %}
-											{% elseif schedule.courseName == 'Souplesse' %}
+											{% elseif schedule.courseName == 'Souplesse/ Renfo' %}
 												{% set class_name = 'bg-souplesse' %}
-											{% elseif schedule.courseName == 'Cours à la demande' %}
+											{% elseif schedule.courseName == 'Cours à la demande Particulier / Essais /Coaching' %}
 												{% set class_name = 'bg-cours-demande' %}
 											{% endif %}
 											<td class="{{ class_name }}" rowspan="{{ duration }}">
 												{{ schedule.courseName }}
 												<br>
-												({{ schedule.startTime|date('H:i') }} - {{ schedule.endTime|date('H:i') }})
+												({{ schedule.startTime|date('H:i') }}
+												-
+												{{ schedule.endTime|date('H:i') }})
 												{% if is_granted('ROLE_ADMIN') %}
 													<br>
 													<a href="{{ path('planning_edit', {id: schedule.id}) }}" class="btn btn-secondary btn-sm">Modifier</a>
