--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -698,6 +698,68 @@ footer.footer p {
 	list-style: none;
 }
 
+.tarifs h1 {
+	background-color: transparent;
+	color: #6a1b9a !important;
+	font-weight: bold;
+	font-size: 35px;
+}
+
+.tarifs .block {
+	margin: 0 auto;
+	max-width: 1400px;
+}
+
+.tarifs h2 {
+	border: 3px solid #208180;
+	border-left: none;
+	border-right: none;
+	background-color: #80eded;
+	padding: 5px 15px;
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.tarifs ul {
+	list-style: none;
+	padding: 0;
+	color: #208180;
+	font-size: 18px;
+	font-weight: 700;
+}
+
+.tarifs li {
+	margin-top: 10px;
+}
+
+.tarifs span {
+	color: #6a1b9a;
+}
+
+.tarifs div {
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+.tarifs .mode_reglement {
+    border: 2px solid;
+	min-width: 1400px;
+	padding: 5px 15px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+.tarifs .mode_reglement h3 {
+	text-align: center;
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.tarifs .mode_reglement li {
+	color: black;
+	margin-top: 20px;
+}
+
 @media screen and (max-width: 1500px) {
 	.table th,
 	.table td {
@@ -963,7 +1025,9 @@ footer.footer p {
 		margin: 0 auto;
 	}
 
-	.coach p, .coach li, .coach .timeline li p {
+	.coach p,
+	.coach li,
+	.coach .timeline li p {
 		font-size: 12px;
 	}
 
