--- a/templates/pricing/index.html.twig
+++ b/templates/pricing/index.html.twig
@@ -1,100 +1,94 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tarifs{% endblock %}
+{% block title %}Tarifs
+{% endblock %}
 
 {% block body %}
-<style>
-    .card {
-        min-height: 100% !important;
-    }
-</style>
+	<style>
+		.card {
+			min-height: 100% !important;
+		}
+	</style>
 
-<div class="container">
-    <h1>Nos Tarifs 2024/2025</h1>
-
-    <div class="row">
-        <div class="col-md-6 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Pole dance (1h30)</h3>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">« Abo annuel classique » 1 cours/semaine (43 cours) : 645 €</li>
-                        <li class="list-group-item">« Abonnement annuel+ » 1 activité + 1 cours Souplesse ou Renfort (86 cours) : 900 €</li>
-                        <li class="list-group-item">« Abonnement souple » carte 10 cours utilisables sur 1 trimestre* : 180 €</li>
-                        <li class="list-group-item">Cours d’essai gratuit si suivi d’une formule (un code vous sera délivré pour le déduire de l’abonnement)</li>
-                        <li class="list-group-item">Cours d’essai sans suite ou cours à l’unité : 20 €</li>
-                        <li class="list-group-item">Cours Particulier : 40 € de l’heure</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Hammock (1h30)</h3>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">« Abo annuel classique » 1 cours/semaine (43 cours) : 645 €</li>
-                        <li class="list-group-item">« Abonnement annuel+ » 1 activité + 1 cours Souplesse ou Renfort (86 cours) : 900 €</li>
-                        <li class="list-group-item">« Abonnement souple » carte 10 cours utilisables sur 1 trimestre* : 180 €</li>
-                        <li class="list-group-item">Cours d’essai gratuit si suivi d’une formule (un code vous sera délivré pour le déduire de l’abonnement)</li>
-                        <li class="list-group-item">Cours d’essai sans suite ou cours à l’unité : 20 €</li>
-                        <li class="list-group-item">Cours Particulier : 40 € de l’heure</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Yoga Aérien (1h00)</h3>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">« Abo annuel classique » 1 cours/semaine (43 cours) : 475 €</li>
-                        <li class="list-group-item">« Abonnement annuel+ » 1 activité + 1 cours Souplesse ou Renfort (86 cours) ou 2 cours Yoga/semaine : 750 €</li>
-                        <li class="list-group-item">« Abonnement souple » carte 10 cours utilisables sur 1 trimestre* : 140 €</li>
-                        <li class="list-group-item">Cours d’essai gratuit si suivi d’une formule (un code vous sera délivré pour le déduire de l’abonnement)</li>
-                        <li class="list-group-item">Cours d’essai sans suite ou cours à l’unité : 15 €</li>
-                        <li class="list-group-item">Cours Particulier : 25 € de l’heure</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Souplesse ou Renforcement seul (1h00)</h3>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">« Abo annuel classique » 1 cours/semaine (43 cours) : 525 €</li>
-                        <li class="list-group-item">« Abonnement souple » carte 10 cours utilisables sur 1 trimestre* : 150 €</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Formule Tout Illimité</h3>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Autant de cours que vous le souhaitez : 1200 €</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Modes de règlement</h3>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Pour Abonnement annuel : Comptant, en 3X, en 4X, en 10X, en 12X</li>
-                        <li class="list-group-item">Pour Carte 10 Cours : Comptant, en 2X</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+	<div class="container tarifs">
+		<h1>Tarifs 2024/2025</h1>
+		<div class="block">
+			<div>
+				<h2>Pole dance 2024/2025 (1h30)</h2>
+				<ul>
+					<li>
+						« Abo annuel Pole Dance » 1 cours/semaine (40 cours) :
+						<span>☐ 600 €</span>
+					</li>
+					<li>
+						« Abonnement annuel + » 1 cours de Pole Dance + 1 cours yoga (80 cours) :
+						<span>☐ 840 €</span>
+					</li>
+					<li>
+						« Abonnement souple » carte 10 cours utilisables sur 1 trimestre* ( à partir du 06/01/2025) :
+						<span>☐ 180 €</span>
+					</li>
+					<li>
+						« Abonnement souple » carte 4 cours utilisables jusqu’au 31/12/2024 :
+						<span>☐ 72€</span>
+					</li>
+					<li>Cours d’essai sans suite ou cours à l’unité:
+						<span>☐ 20 €</span>
+					</li>
+					<li>Cours Particulier :
+						<span>40 € de l’heure</span>
+					</li>
+				</ul>
+			</div>
+			<div>
+				<h2>Yoga Aérien 2024/2025 (1h00)</h2>
+				<ul>
+					<li>
+						« Abo annuel Yoga aérien » 1 cours/semaine (40 cours) :
+						<span>☐ 440 €</span>
+					</li>
+					<li>
+						« Abonnement annuel + » 2 cours Yoga/semaine :
+						<span>☐ 700 €</span>
+					</li>
+					<li>
+						« Abonnement souple » carte 10 cours utilisables sur 1 trimestre* ( à partir du 06/01/2025) :
+						<span>☐ 140 €</span>
+					</li>
+					<li>
+						« Abonnement souple » carte 4 cours utilisables jusqu’au 31/12/2024 :
+						<span>☐ 56 €</span>
+					</li>
+					<li>Cours d’essai sans suite ou cours à l’unité:
+						<span>☐ 15 €</span>
+					</li>
+					<li>Cours Particulier :
+						<span>25 € de l’heure</span>
+					</li>
+				</ul>
+			</div>
+			<div>
+				<h2>MIXTE Yoga Aérien / Pole Dance 2024/2025</h2>
+				<ul>
+					<li>
+						« Abonnement annuel + » 2 activités 1 cours par semaine, (20 cours Yoga-20 cours Pole dance) :
+						<span>☐ 520 €</span>
+					</li>
+				</ul>
+			</div>
+			<div class="mt-4">
+				<h2>FORMULE TOUT ILLIMITÉ*² autant de cours que vous le souhaitez :
+					<span>☐ 1000 €</span>
+				</h2>
+			</div>
+			<div class="mode_reglement">
+				<h3 class="card-title">Modes de règlement</h3>
+				<ul class="list-group list-group-flush">
+					<li>Pour Abonnement annuel: Comptant ☐ en 3X ☐ en 10X ☐</li>
+					<li>Mode de règlement pour Carte 10 Cours : Comptant ☐ en 2 X ☐</li>
+					<li>Mode de règlement pour Carte 4 Cours : Comptant ☐</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 {% endblock %}
